# hadoop-app

./: .gitignore  Dockerfile  LICENSE  README.md  app.Dockerfile  docker-compose-db.yml  docker-compose.yaml  libmongocrypt.Dockerfile  mongo-init.js  setup.cfg
.github/workflows/: lint-code.yaml  unit-tests.yaml
flaskr/: app.py  config.py  run.py
flaskr/models/: address_data.py  adress_data.py  db.py  users.py
flaskr/routes/: address_data.py  adress_data.py  users.py
flaskr/static/: about.css  about.txt  home.css  layout.css  navigation.css  result.css
flaskr/templates/: about.html  home.html  layout.html  navigation.html  result.html
tests/: conftest.py  consts.py  test_user.py
