[metadata]
name = flaskr
author = Jeremiasz Macura
author-email = jeremiaszmacura99@gmail.com
summary = Web application for hospital rooms management
description-file = README.md
home-page = https://github.com/Jeremiaszmacura/hospital-rooms-management-system
requires-dist = setuptools
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Healthcare Industry
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Flask
    Topic :: Office/Business

[options]
packages = find:
install_requires = 
    flask
    pymongo
    flask_sqlalchemy
    python-dotenv
    bs4
    requests
    matplotlib
    cryptography
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest
    pylint
    black

[options.extras_require]
dev =
    pytest
    pylint
    black
    wheel

[options.packages.find]
exclude = tests

[aliases]
test=pytest