[metadata]
name = flaskr
author = Jeremiasz Macura
author-email = jeremiaszmacura99@gmail.com
summary = Web application for scrapping words and prepare statistics
description-file = README.md
home-page = https://github.com/Jeremiaszmacura/hadoop-app
requires-dist = setuptools
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Flask
    Topic :: Office/Business

[options]
packages = find:
install_requires = 
    flask
    pymongo
    flask_sqlalchemy
    python-dotenv
    bs4
    requests
    matplotlib
    cryptography
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest
    pylint
    black

[options.extras_require]
dev =
    pytest
    pylint
    black
    wheel
test =
    pytest

[options.packages.find]
exclude = tests

[aliases]
test=pytest